# rtc-tools

./: .gitignore  CHARTER.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml
doc/: _readme.txt  conf.py  index.rst  optimization.rst  requirements.txt
doc/_static/: external_links.js  theme_overrides.css
doc/examples/optimization/: cascading_channels.rst  channel_pulse.rst  debugging.rst  fallback_options.rst
doc/optimization/: open_channel_flow_validation.rst  solver_configuration.rst
examples/cascading_channels/model/: Example.mo
examples/mixed_integer/src/: example.py
examples/pumped_hydropower_system/src/: example.py
src/rtctools/: rtctoolsapp.py  util.py
src/rtctools/_internal/: casadi_helpers.py  casadi_to_LP.py  casadi_to_LP_original  casadi_to_lp.py  modelica_errors.py  pymoca_helpers.py
src/rtctools/data/: pi.py
src/rtctools/optimization/: collocated_integrated_optimization_problem.py  goal_programming_mixin.py  goal_programming_mixin_base.py  min_abs_goal_programming_mixin.py  modelica_mixin.py  optimization_problem.py  single_pass_goal_programming_mixin.py
src/rtctools/simulation/: simulation_problem.py
tests/: test_rtctoolsapp.py
tests/internal/: test_modelica_errors.py  test_pymoca_helpers.py
tests/optimization/: regenerate_lp_reference.py  test_export_lp.py  test_extra_casadipath.py  test_goal_programming.py  test_modelica_mixin.py  test_path_variable_assembly.py  test_single_pass_goal_programming.py  test_vector_constraints_variables.py  test_vector_goals.py
tests/optimization/data/: EmptyModel.mo  ModelSIUnits.mo  ModelSymbolicParameters.mo  reference_linear_model.lp
tests/simulation/data/infeasible_initial_value/: model_with_sym_ystart.mo
