[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rtc-tools"
dynamic = ["version"]
license = { file = "COPYING.LESSER" }
description = "Toolbox for control and optimization of water systems."
readme = "README.md"
authors = [
    {name = "Deltares"}
]
maintainers = [
    {name = "Deltares"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]
dependencies = [
    "casadi >= 3.6.3, < 3.8, !=3.6.6",
    "numpy >= 1.21.2",
    "scipy >= 1.7.2",
    "pymoca >= 0.9.1, == 0.9.*",
    "rtc-tools-channel-flow >= 1.2.0",
    "defusedxml >= 0.7.0",
]

[project.optional-dependencies]
netcdf = ["netCDF4"]
all = ["netCDF4"]

[dependency-groups]
build = [
    "hatchling >= 1.26.3",
    "hatch-vcs >= 0.4.0",
]
dev = [
    "netCDF4 >= 1.6.0",
    {include-group = "build"},
    {include-group = "docs"},
    {include-group = "style"},
    {include-group = "tests"},
]
docs = [
    "sphinx >= 7.0.0",
    "sphinx_rtd_theme >= 1.3.0",
    "matplotlib >= 3.7.0",
]
style = [
    "pre-commit>=3.3.0",
]
tests = [
    "pytest >= 8.2.0",
    "pytest-cov >= 6.0.0",
    "tox >= 4.18.0",
    "tox-uv >= 1.25.0",
]

[project.urls]
Homepage = "https://oss.deltares.nl/web/rtc-tools/home"
Download = "http://github.com/rtc-tools/rtc-tools/"

[project.scripts]
rtc-tools-download-examples = "rtctools.rtctoolsapp:download_examples"
rtc-tools-copy-libraries = "rtctools.rtctoolsapp:copy_libraries"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["src/rtctools"]
include = [
  "/COPYING.LESSER",
  "/README.md",
]

[tool.ruff]
lint.ignore = [
	"B904", # Fix someday: raising exceptions within except
]
line-length = 100
lint.select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # default / pycodestyle
    "F", # default / pyflakes
    "I", # isort
    "UP", # pyupgrade
    "W", # pycodestyle
]
